# GPTZero-V

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  handler.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml  stale.yml
authenticity/: authenticity.py  c2pa_handler.py  exif_handler.py
components/: __init__.py
src/.streamlit/: config.toml
src/authenticity/: c2pa_metadata.py  metadata_utils.py
src/components/: card.py  probability.py
